--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,7 @@
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>${version.redisson}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
